Correção da Troca de Tela

--- a/Pages/Header.html
+++ b/Pages/Header.html
@@ -14,7 +14,7 @@
            <h1>ChessRoom</h1>
         </div>
         <div class="right">
-            <img src="../Assets/Icon/semUsuario.png" id="iconUser">
+            <img src="../Assets/Icon/logout.png" id="iconUser">
         </div>
     </div>
 </body>
