--- a/Pages/LoginPage.html
+++ b/Pages/LoginPage.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Marco Aurélio Consoni Mazanti">
     <meta name="keywords" content="Porta de entrada, Login, Cadastro">
 
-    <link rel="stylesheet" href="CSS/LoginPage.css">
+    <link rel="stylesheet" href="../CSS/LoginPage.css">
 
     <title>Login Page</title>
 </head>
@@ -76,6 +76,6 @@
         </div>
     </div>
 
-    <script type="module" src="JavaScript/LoginPage.js"></script>
+    <script type="module" src="../JavaScript/LoginPage.js"></script>
 </body>
 </html>
