Adição Das InfoJogador e Jogador, Prototipação do Ranking e Utilização de Cookies

--- a/Pages/HomePage.html
+++ b/Pages/HomePage.html
@@ -29,18 +29,18 @@
                     <div id="left-info">
                         <div class="divisor">
                             <label class="tituloInfos">ID jogador: </label>
-                            <label class="valoresInfos"></label>
+                            <label class="valoresInfos" id="idJogador"></label>
                         </div>
 
                         <div class="divisor">
                             <label class="tituloInfos">Nome: </label>
-                            <label class="valoresInfos"></label><br>
+                            <label class="valoresInfos" id="nomeJogador"></label><br>
 
                             <label class="tituloInfos">Pontuação: </label>
-                            <label class="valoresInfos"></label><br>
+                            <label class="valoresInfos" id="pontuacaoJogador"></label><br>
 
                             <label class="tituloInfos">Ranking: </label>
-                            <label class="valoresInfos"></label>
+                            <label class="valoresInfos" id="rankingJogador"></label>
                         </div>
                     </div>
 
@@ -50,18 +50,18 @@
                     <div id="right-info">
                         <div class="divisor">
                             <label class="tituloInfos">Jogos participados: </label>
-                            <label class="valoresInfos"></label>
+                            <label class="valoresInfos" id="jogosParticipadosJogador"></label>
                         </div>
 
                         <div class="divisor">
                             <label class="tituloInfos">Vitórias: </label>
-                            <label class="valoresInfos"></label><br>
+                            <label class="valoresInfos" id="vitoriasJogador"></label><br>
 
                             <label class="tituloInfos">Empates: </label>
-                            <label class="valoresInfos"></label><br>
+                            <label class="valoresInfos" id="empatesJogador"></label><br>
 
                             <label class="tituloInfos">Derrotas: </label>
-                            <label class="valoresInfos"></label>
+                            <label class="valoresInfos" id="derrotasJogador"></label>
                         </div>
                     </div>
                 </div>
