Prototipação da Aba de Mensagens

--- a/Pages/ChatPage.html
+++ b/Pages/ChatPage.html
@@ -18,9 +18,38 @@
   </header>
 
   <main>
+    <div id="ChatPage">
+      <div id="left">
+        <h1>Amigos</h1>
+        <hr style="width: 100%;">
 
+        <table id="listaAmigos">
+          <thead>
+          <tr>
+            <th style="width:1%; white-space:nowrap; padding: 0 10px 0 10px;">ID</th>
+            <th>Nome</th>
+            <th style="width:1%; white-space:nowrap; padding: 0 10px 0 10px;">MSG</th>
+          </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+
+      </div>
+
+      <div id="center"></div>
+      <div id="right">
+        <div id="chat">
+          <!-- Caixa de mensagem -->
+          <div class="box amigo">
+            <label class="mensagem">Mensagem escrita pelo usuáriooooooo </label>
+          </div>
+          <div class="box usuario">
+            <label class="mensagem">Mensagem escrita pelo usuáriooooooo </label>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
-
   <footer id="Footer"></footer>
 
   <script type="module" src="../JavaScript/ChatPage.js"></script>
