Concluido Modelo de Chat Funcional

--- a/Pages/ChatPage.html
+++ b/Pages/ChatPage.html
@@ -38,8 +38,18 @@
 
       <div id="center"></div>
       <div id="right">
-        <div id="chat">
-          <!-- Caixa de mensagem -->
+        <div id="up">
+          <div id="chat">
+            <!-- Caixa de mensagem -->
+          </div>
+        </div>
+        <div id="down">
+          <div id="boxMensagem">
+            <form id="formMensagem" name="formMensagem">
+              <input type="text" id="txtMensagem" name="txtMensagem" placeholder="Digite a mensagem aqui">
+              <button type="submit">Enviar</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
