Prototipação da Aba de Jogo e seu Funcionamento

--- a/Pages/Header.html
+++ b/Pages/Header.html
@@ -11,7 +11,7 @@
             <img src="../Assets/Icon/homeIcon.png" id="iconHome">
         </div>
         <div class="center">
-           <h1>ChessRoom</h1>
+           <h1>SafeClick</h1>
         </div>
         <div class="right">
             <img src="../Assets/Icon/menuIcon.png" id="menuIcon">
