--- a/Pages/GamePage.html
+++ b/Pages/GamePage.html
@@ -43,6 +43,14 @@
                 </table>
             </div>
         </div>
+
+        <div id="popupOverlay" class="overlay">
+            <div id="popup">
+                <label id="fimJogo" class="textoFinal"></label><br>
+                <label id="dadosFimJogo" class="textoFinal"></label><br>
+                <button onclick="voltarHome()" class="btnVoltarHome">Voltar a HomePage</button>
+            </div>
+        </div>
     </main>
 
     <script type="module" src="../JavaScript/GamePage.js"></script>
